--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
     "axios": "^0.27.2",
     "preact": "^10.10.0"
   },
-  "repository": "https://github.com/Ericarthurc/ericarthurc.com.git"
+  "repository": "https://github.com/Ericarthurc/ericarthurc.com_rust.git"
 }
